# tauri-leptos-template

./: .gitignore  AndroidManifest_template.xml  Cargo.toml  README.md  app_build.gradle.kts_template  build.gradle.kts_template  latest.md  pre-commit-rust
.github/workflows/: build-and-release.yml
common/src/: error.rs
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/capabilities/schemas/: linux-schema.json
src-tauri/src/: lib.rs  main.rs  mobile.rs
src-tauri/src/commands/: example_commands.rs
src/components/: app.rs
style/: output.css
tests/: integration.rs
