[package]
name = "tauri-leptos-template"
version = "0.0.0"
edition = "2021"

[dependencies]
log = "0.4"
leptos = { version = "0.6.4", features = ["csr", "nightly"] }
leptos_router = { version = "0.6.4", features = ["csr", "nightly"] }
leptos_meta = {version = "0.6.4", features = ["csr", "nightly"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_log = "1.0.0"
template_common = { path = "./common" }
console_error_panic_hook = "0.1.7"

[workspace]
members = [ "common","src-tauri"]
