[package]
name = "tauri-leptos"
version = "0.0.0"
description = "Tauri Leptos template"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[build-dependencies]
tauri-build = {features = [] , version = "2.0.0-alpha.14" }

[dependencies]
template_common = { path = "../common" }
tauri = { features = [] , version = "2.0.0-alpha.21" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }

openssl = {version = "0.10.45", features = ["vendored"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
